# bc-allocators

./: .gitignore  CHANGELOG.md  README.md  cppcheck-suppressions.txt  meson.build
.claude/: CLAUDE.md
.github/workflows/: ci.yml  release.yml
benchmarks/: bench_bc_allocators_ops.c  bench_bc_allocators_vs_external.c  meson.build
debian/: changelog  control  copyright
fuzzing/: fuzz_bc_allocators_arena.c  fuzz_bc_allocators_pool.c  meson.build
include/internal/: bc_allocators_arena_internal.h  bc_allocators_context_internal.h  bc_allocators_free_list_internal.h  bc_allocators_platform_internal.h  bc_allocators_slab_internal.h
include/public/: bc_allocators.h  bc_allocators_aligned.h  bc_allocators_arena.h  bc_allocators_context.h  bc_allocators_pool.h  bc_allocators_slab.h  bc_allocators_typed_array.h
src/: meson.build
src/aligned/: bc_allocators_aligned.c
src/arena/: bc_allocators_arena.c
src/context/: bc_allocators_context.c
src/platform/: bc_allocators_platform_linux.c
src/pool/: bc_allocators_pool.c
src/slab/: bc_allocators_slab.c
tests/: bc_core_wrap_redirect.h  meson.build  test_bc_allocators_aligned_allocate.c  test_bc_allocators_alignment.c  test_bc_allocators_arena.c  test_bc_allocators_arena_coverage.c  test_bc_allocators_arena_errors.c  test_bc_allocators_arena_superpage.c  test_bc_allocators_context.c  test_bc_allocators_context_errors.c  test_bc_allocators_huge_page_allocate.c  test_bc_allocators_leak_detection.c  test_bc_allocators_pool.c  test_bc_allocators_pool_errors.c  test_bc_allocators_pool_large.c  test_bc_allocators_pool_magazine.c  test_bc_allocators_pool_page_class.c  test_bc_allocators_pool_small_free.c  test_bc_allocators_pool_stats.c  test_bc_allocators_pool_wrap.c  test_bc_allocators_safe_math.c  test_bc_allocators_slab.c  test_bc_allocators_slab_errors.c  test_bc_allocators_typed_array.c
