fuzz_bc_allocators_pool = executable('fuzz_bc_allocators_pool',
    'fuzz_bc_allocators_pool.c',
    dependencies : [bc_allocators_dep, bc_core_dep],
)

fuzz_bc_allocators_arena = executable('fuzz_bc_allocators_arena',
    'fuzz_bc_allocators_arena.c',
    dependencies : [bc_allocators_dep, bc_core_dep],
)
